# project2_Iguminov_M25-555

./: .gitignore  Makefile  README.md  pyproject.toml
src/primitive_db/: core.py  engine.py  main.py  utils.py
